# piano_transaltion_project

./: README.md
Ideal Piano (for Windows)/: pyproject.toml
Ideal Piano (for Windows)/Ideal Piano/: last_path.txt  progress_status.txt
Ideal Piano (for Windows)/Ideal Piano/data/merged_midi_output/: Sarabande HWV 437 No. 4.mid
Ideal Piano (for Windows)/Ideal Piano/data/mxl_to_mid_output/: Sarabande HWV 437 No. 4.pdf_1.mvt1.mid  Sarabande HWV 437 No. 4.pdf_1.mvt2.mid  (+1 more)
MuseScore 4/lib/: opus.lib
MuseScore 4/locale/: instruments_af.qm  instruments_ar.qm  instruments_ar_EG.qm  instruments_ar_SD.qm  instruments_ast.qm  instruments_be.qm  instruments_bg.qm  instruments_ca.qm  instruments_ca@valencia.qm  instruments_cs.qm  instruments_cy.qm  instruments_da.qm  instruments_de.qm  instruments_el.qm  instruments_en.qm  instruments_en_GB.qm  instruments_en_US.qm  instruments_eo.qm  instruments_es.qm  instruments_et.qm  instruments_eu.qm  instruments_fa.qm  instruments_fi.qm  instruments_fil.qm  instruments_fo.qm  instruments_fr.qm  instruments_ga.qm  instruments_gd.qm  instruments_gl.qm  instruments_he.qm  instruments_hr.qm  instruments_hu.qm  instruments_hy.qm  instruments_it.qm  instruments_ja.qm  instruments_ka.qm  instruments_ko.qm  instruments_lt.qm  instruments_lv.qm  instruments_mt.qm  (+87 more)
pdf2png_library/: main.py  pyproject.toml
pdf2png_library/data_folder_manegment/: clear_folders.py  folder_definition.py
pdf2png_library/final_midi/: merge_mxl_files.py  midi_file_length.py
pdf2png_library/format_change/: mxl_to_mdi.py  pdf_to_png.py  png_to_mxl.py
(+4 files in other folders)
