[tool.poetry]
name = "pdf2png-library"
version = "0.1.0"
description = ""
authors = ["GustavTheTrainee <gustavsvensson941@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.17.0"
mido = "^1.3.2"
fitz = "^0.0.1.dev2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

